2002-05-20  Bastien Nocera  <hadess@hadess.net>

	* icons/Makefile.am:
	* icons/i-dvd.png: added a crummy home-made icon for DVDs

2002-05-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "mk" to ALL_LINGUAS.
	
2002-05-16  Bastien Nocera  <hadess@hadess.net>

	* icons/Makefile.am:
	* icons/i-cdrom-audio.png: add a dodgy home-made icon for Audio CDs

2002-05-13  Jacob Berkman  <jacob@ximian.com>

	* gnome-vfs-mime-magic: read more byts for svgs, as some have a
	comment before the <!DOCTYPE> tag which broke scalable gorilla

2002-05-06  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added gnome-audio-x-it.png as the icon for
	audio/x-it
	* icons/Makefile.am:
	* icons/gnome-audio-x-it.png: updated

2002-05-01  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: added magic for Impulse Tracker modules

2002-05-01  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* configure.in: Added Basque (eu) and Vietnamese (vi) to ALL_LINGUAS

2002-04-25  Seth Nickell  <snickell@stanford.edu>

	* check-mime.pl:

	Update to handle component keyword change.

	_ALWAYS_ run this script before checking in please.

	* gnome-vfs.applications:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime:

	Add several new types, change icon names.
	
	* icons/Makefile.am:
	* icons/gnome-application-pdf.png:
	* icons/gnome-application-pgp-encrypted.png:
	* icons/gnome-application-pgp-keys.png:
	* icons/gnome-application-x-applix-spreadsheet.png:
	* icons/gnome-application-x-applix-word.png:
	* icons/gnome-application-x-c-header.png:
	* icons/gnome-application-x-c-source.png:
	* icons/gnome-application-x-cc-source.png:
	* icons/gnome-application-x-deb.png:
	* icons/gnome-application-x-gnome-app-info.png:
	* icons/gnome-application-x-jar.png:
	* icons/gnome-application-x-java-byte-code.png:
	* icons/gnome-application-x-java-source.png:
	* icons/gnome-application-x-mrproject.png:
	* icons/gnome-application-x-php.png:
	* icons/gnome-application-x-python-bytecode.png: