@@ -67,7 +67,11 @@ application/pkcs7-signature
 
 application/postscript
 	_description=PostScript document
-	default_action_type=application
+	default_action_type=component
+	short_list_component_iids=OAFIID:GNOME_GGV_Control
+	short_list_component_iids_for_novice_user_level=OAFIID:GNOME_GGV_Control
+	short_list_component_iids_for_intermediate_user_level=OAFIID:GNOME_GGV_Control
+	short_list_component_iids_for_advanced_user_level=OAFIID:GNOME_GGV_Control
 	short_list_application_ids_for_novice_user_level=ggv,gv,ghostview
 	short_list_application_ids_for_intermediate_user_level=ggv,gv,ghostview
 	short_list_application_ids_for_advanced_user_level=ggv,gv,ghostview
